--- a/frontend/static/style.css
+++ b/frontend/static/style.css
@@ -18,3 +18,46 @@ body {
 canvas {
     max-width: 100%;
 }
+
+#customRangeInputs {
+    display: none;
+    border: 1px solid gray;
+    padding: 16px;
+    border-radius: 6px;
+    background-color: #fff;
+    width: fit-content;
+    margin: auto 10px;
+}
+
+.selectCalendar {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 10px;
+    gap: 5px;
+}
+
+#startTime,
+#endTime {
+  width: 150px;
+  padding: 5px;
+  font-size: 14px;
+  color : gray;
+  border-radius: 3px;
+  border: 1px solid #888;
+}
+
+#fetchButton {
+    width: 100px;
+    padding: 5px;
+    margin-top: 10px;
+    font-size: 14px;
+    background-color: #04c00a;
+    color: white;
+    border: none;
+    border-radius: 3px;
+    cursor: pointer;
+}   
+#fetchButton:hover {
+    background-color: #03a009;
+}
